--- a/javascript/effect/quizeffect05.html
+++ b/javascript/effect/quizeffect05.html
@@ -129,32 +129,527 @@
                 answerResult : "2",
                 answerEx : "조화는 조형의 기본 요소인 선, 형태, 색채가 잘 어울리게 하는 것입니다."
             },
-            // {
-            //     answerType : "웹디자인기능사 2010년 01회",
-            //     answerNum : "7",
-            //     answerAsk : "감산 혼합의 3원색이 아닌 것은?",
-            //     answerChoice : {
-            //         1: "MAGENTA",
-            //         2: "YELLOW",
-            //         3: "BLUE",
-            //         4: "CYAN"
-            //     },
-            //     answerResult : "3",
-            //     answerEx : "감산 혼합의 3원색은 자주, 청록, 노랑 입니다."
-            // },
-            // {
-            //     answerType : "웹디자인기능사 2010년 01회",
-            //     answerNum : "8",
-            //     answerAsk : "디자인 원리와 관련된 용어 설명 중 틀린 것은?",
-            //     answerChoice : {
-            //         1: "조화-둘 이상의 요소가 서로 밀접한 관계를 갖고 어울렸을 때 말하는 것",
-            //         2: "통일-정돈과 안정된 느낌을 주는 것",
-            //         3: "변화-크기나 형태 및 색채 등이 같지 않은 것",
-            //         4: "균형-형이나 색 등이 반복되어 느껴지는 아름다운 운동감"
-            //     },
-            //     answerResult : "4",
-            //     answerEx : "균형은 물리적 구조와 색채에서 시각적인 안정감을 주는 것을 의미합니다. 크게 대칭과 비대칭이 있습니다. 형이나 색 등이 반복되어 느껴지는 아름다운 운동감을 율동이라 합니다."
-            // },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "7",
+                answerAsk : "감산 혼합의 3원색이 아닌 것은?",
+                answerChoice : {
+                    1: "MAGENTA",
+                    2: "YELLOW",
+                    3: "BLUE",
+                    4: "CYAN"
+                },
+                answerResult : "3",
+                answerEx : "감산 혼합의 3원색은 자주, 청록, 노랑 입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "8",
+                answerAsk : "디자인 원리와 관련된 용어 설명 중 틀린 것은?",
+                answerChoice : {
+                    1: "조화-둘 이상의 요소가 서로 밀접한 관계를 갖고 어울렸을 때 말하는 것",
+                    2: "통일-정돈과 안정된 느낌을 주는 것",
+                    3: "변화-크기나 형태 및 색채 등이 같지 않은 것",
+                    4: "균형-형이나 색 등이 반복되어 느껴지는 아름다운 운동감"
+                },
+                answerResult : "4",
+                answerEx : "균형은 물리적 구조와 색채에서 시각적인 안정감을 주는 것을 의미합니다. 크게 대칭과 비대칭이 있습니다. 형이나 색 등이 반복되어 느껴지는 아름다운 운동감을 율동이라 합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "9",
+                answerAsk : "일반적으로 디자인이 갖추어야 할 조건으로 가장 중요한 것은?",
+                answerChoice : {
+                    1: "장식적인 요소를 만들어 주는 것",
+                    2: "실용적인 기능과 조형적인 아름다움을 추구하는 것",
+                    3: "상징적인 형태로 단순화시키는 것",
+                    4: "타제품과 차별화 시키는 것"
+                },
+                answerResult : "2",
+                answerEx : "디자인의 4대 조건은 합목적성, 심미성, 독창성, 경제성 입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "10",
+                answerAsk : "시각적으로나 촉각적으로 느껴지는 물체 표면의 느낌은?",
+                answerChoice : {
+                    1: "공간",
+                    2: "점이",
+                    3: "질감",
+                    4: "시간"
+                },
+                answerResult : "3",
+                answerEx : "물체를 만지는 느낌을 질감이라고 한다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "11",
+                answerAsk : "저채도의 배색이 주는 느낌은?",
+                answerChoice : {
+                    1: "부드러운 느낌",
+                    2: "명쾌한 느낌",
+                    3: "화려한 느낌",
+                    4: "활기찬 느낌"
+                },
+                answerResult : "1",
+                answerEx : "저채도는 부드럽고 온화한 느낌을 줍니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "12",
+                answerAsk : "지루함을 잊게 해 줄 대기실이나 병원 실내의 벽에 대한 배색으로 가장 적절한 것은?",
+                answerChoice : {
+                    1: "난색",
+                    2: "한색",
+                    3: "중성색",
+                    4: "무채색"
+                },
+                answerResult : "2",
+                answerEx : "한색 : 차갑게 느껴지는 색으로, 시원하며 차분함과 안정감을 느끼게 해 주는 색입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "13",
+                answerAsk : "다음 그림과 같이 일부분이 끊어진 상태인데도 불구하고 문자로 인식되는 것은 어떤 원리 때문인가?",
+                answerChoice : {
+                    1: "대치성",
+                    2: "유사성",
+                    3: "폐쇄성",
+                    4: "연속성"
+                },
+                answerResult : "3",
+                answerEx : "닫혀있지 않은 도형이 심리적으로 닫혀져 보이거나 무리지어 보이는 원리이다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "14",
+                answerAsk : "부분과 부분 또는 부분과 전체 사이에 안정된 관련성을 지니며 서로 함께 속해 있는 것처럼 보이는 디자인의 원리는?",
+                answerChoice : {
+                    1: "비례",
+                    2: "조화",
+                    3: "균형",
+                    4: "강조"
+                },
+                answerResult : "2",
+                answerEx : "유사, 대비, 균일, 강약 등이 포함되어 나타나는 원리로 통일과 변화, 균형감이 안정적으로 결합된 상태"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "15",
+                answerAsk : "해안에 있는 조약돌은 자연의 힘에 의해 필연적으로 만들어진 형태라는 자연의 법칙이 만든 자연의 형태를 주장한 사람은?",
+                answerChoice : {
+                    1: "르 코르뷔지에",
+                    2: "파파넥",
+                    3: "아른하임",
+                    4: "모홀로나기"
+                },
+                answerResult : "4",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "16",
+                answerAsk : "먼셀 표색계에 관한 설명으로 틀린 사람은?",
+                answerChoice : {
+                    1: "먼셀의 색채체게는 색상, 명도, 채도의 3속성을 근거로 하여 작성되었다.",
+                    2: "채도 단계는 무채색을 0으로 하고, 그 최고가 14단계이다.",
+                    3: "명도 단계는 검정색으로 10으로 하고, 흰색을 0으로 하여 모두 11단계이다.",
+                    4: "색상은 5주요 색상인 빨강, 노랑, 녹색, 파랑, 보라이다."
+                },
+                answerResult : "3",
+                answerEx : "명도는 검정을 0으로 흰색을 10으로 하고 숫자 앞에 N을 붙여서 표시"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "17",
+                answerAsk : "다음 설명의 ( ) 안에 알맞은 단어를 차례대로 나열한 것은?",
+                answerChoice : {
+                    1: "warm color, cool color",
+                    2: "vivid color, cool color",
+                    3: "bright color, strong color",
+                    4: "warm color, strong color"
+                },
+                answerResult : "1",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "18",
+                answerAsk : "다음이 설정하고 있는 현상으로 옳은 것은?",
+                answerChoice : {
+                    1: "백주시",
+                    2: "명소시",
+                    3: "박명시",
+                    4: "야간시"
+                },
+                answerResult : "3",
+                answerEx : "푸르킨예 현상 (박명 현상, 박명시)"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "19",
+                answerAsk : "고딕성당의 위엄과 권위를 나타내기 위해 많이 사용하던 선(Line)은?",
+                answerChoice : {
+                    1: "수평선",
+                    2: "곡선",
+                    3: "절선",
+                    4: "수직선"
+                },
+                answerResult : "4",
+                answerEx : "직선 : 정적, 경직"<br>"수직선 : 긴장감, 상승"<br>"수평선 : 평온, 안정감, 평화로운 느낌"<br>"사선 : 활동적이고 불안정한 느낌"<br>"곡선 : 우아함, 부드러움, 동적인 느낌"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "20",
+                answerAsk : "눈이 부시지 않고 조도가 균일하며, 그림자가 없는 부드러운 빛을 내어 침실이나 병실 등 휴식공간에 사용되는 조명 방법은?
+,
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "",
+                answerAsk : "",
+                answerChoice : {
+                    1: "",
+                    2: "",
+                    3: "",
+                    4: ""
+                },
+                answerResult : "",
+                answerEx : ""
+            },
         ];
 
         // 선택자
