--- a/javascript/effect/quizeffect05.html
+++ b/javascript/effect/quizeffect05.html
@@ -301,289 +301,288 @@
             {
                 answerType : "웹디자인기능사 2010년 01회",
                 answerNum : "20",
-                answerAsk : "눈이 부시지 않고 조도가 균일하며, 그림자가 없는 부드러운 빛을 내어 침실이나 병실 등 휴식공간에 사용되는 조명 방법은?
-,
+                answerAsk : "눈이 부시지 않고 조도가 균일하며, 그림자가 없는 부드러운 빛을 내어 침실이나 병실 등 휴식공간에 사용되는 조명 방법은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "전반확산조명",
+                    2: "간접조명",
+                    3: "직접조명",
+                    4: "반간접조명"
                 },
-                answerResult : "",
+                answerResult : "2",
+                answerEx : "간접조명은 천장에 부딪힌 빛이 아래로 반사, 눈부심이 없는 부드러운 빛을 내는 조명"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "21",
+                answerAsk : "웹 브라우저에서 그림 이미지와 문서를 저장하는 방법으로 틀린 것은?",
+                answerChoice : {
+                    1: "문서는 ASCII 형태로 저장할 수 있다.",
+                    2: "이미지 파일은 문서와 따로 저장할 수 있다.",
+                    3: "HTML 소스가 공개되지 않으므로 HTML 소스형태로 저장 할 수 없다.",
+                    4: "웹 브라우저 화면의 형태 그대로 캡쳐(Capture)할 수 있다."
+                },
+                answerResult : "3",
+                answerEx : "웹브라우저의 보기 메뉴 - 소스보기(또는 원본) 이 있으므로 소스가 공개 됩니다. 저장하면 HTML형식으로 저장이 됩니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "22",
+                answerAsk : "다음 설명과 관계가 없는 것은?",
+                answerChoice : {
+                    1: "bug",
+                    2: "crawler",
+                    3: "robot",
+                    4: "worm"
+                },
+                answerResult : "1",
                 answerEx : ""
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "23",
+                answerAsk : "컴퓨터 네트워크의 장점으로 틀린 것은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "공유를 통하여 보안성을 높일 수 있다.",
+                    2: "다른 주변장치를 공유할 수 있다.",
+                    3: "공동 작업을 할 수 있다.",
+                    4: "하나의 응용 프로그램을 여러 사람이 사용할 수 있다."
                 },
-                answerResult : "",
+                answerResult : "1",
+                answerEx : "공유를 하게 되면 제일 심각하게 고려해야할 것이 보안입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "24",
+                answerAsk : "웹 페이지 저작 도구에 대한 설명으로 가장 적절한 것은?",
+                answerChoice : {
+                    1: "웹 페이지에서 사운드 및 음악 CD 개발을 위하여 주로 쓰이는 것을 말한다.",
+                    2: "웹 페이지에서 비디오 캡쳐와 동영상 편집을 위한 것을 말한다.",
+                    3: "웹 페이지에서 고급 예술적 효과로 영상을 디자인하는 것을 말한다.",
+                    4: "웹 페이지에서 사운드, 애니메이션, 이미지, 텍스트 등을 통하여 질서 있게 각 요소들을 편집하는 것을 말한다."
+                },
+                answerResult : "4",
+                answerEx : "웹페이지저작도구에는 웹에디터, 그래픽 툴, 플래시 등이 필요합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "25",
+                answerAsk : "네트워크 형태 중 네트워크를 구성하는 모든 노드들이 중심의 한 노드에 일대일로 연결된 형태는?",
+                answerChoice : {
+                    1: "Star형",
+                    2: "Ring형",
+                    3: "Tree형",
+                    4: "Bus형"
+                },
+                answerResult : "1",
+                answerEx : "중앙집중식의 형태인 성형은 모든 회선들이 중앙의 메인컴퓨터로 연결되는 형태입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "26",
+                answerAsk : "HTML 문서의 특징으로 옳지 않은 것은?",
+                answerChoice : {
+                    1: "HTML 문서 내의 단어나 그림을 마우스로 클릭하여 그것과 연결된 새로운 문서로 이동하게 하는 하이퍼링크 기능을 제공한다.",
+                    2: "HTML 파일 확장자는 .txt이다.",
+                    3: "HTML 문서는 확장자의 운영체제에 상관없이 단지 브라우저만 있으면 HTML로 작성된 모든 웹 문서들을 읽을 수 있다.",
+                    4: "HTML 4.0에서는 CSS(Cascading Style Sheet)를 이용하여 색깔과 폰트, 레아웃을 자유롭게 할 수 있다."
+                },
+                answerResult : "2",
+                answerEx : "HTML파일의 확장자는 HTM, HTML 입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "27",
+                answerAsk : "소스 코드가 HTML 문서 내에 포함되어 사용자의 브라우저에서 직접 번역되어 수행되는 것은?",
+                answerChoice : {
+                    1: "자바 애플리케이션",
+                    2: "자바 스크립트",
+                    3: "자바 시크리트",
+                    4: "자바 빈즈"
+                },
+                answerResult : "2",
+                answerEx : "HTML안에 소스크드를 삽입하여 부라우저에서 직접 실행되는 것은 자바스크립트입니다. 자바애플릿은 별도의 번역 과정을 거쳐서 실행됩니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "28",
+                answerAsk : "인터넷의 발전을 시대 순으로 옳게 나열한 것은?",
+                answerChoice : {
+                    1: "ARPANET → NSFNET → TCP/IP 표준 → WWW",
+                    2: "ARPANET → TCP/IP 표준 → NSFNET → WWW",
+                    3: "TCP/IP 표준 → ARPANET → NSFNET → WWW",
+                    4: "TCP/IP 표준 → NSFNET → ARPANET → WWW"
+                },
+                answerResult : "2",
+                answerEx : "69년:ARPANET, 82년:TCP/IP 표준, 86년:NSFNET, 92년:WWW"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "29",
+                answerAsk : "스타일시트에 대한 설명으로 틀린 것은?",
+                answerChoice : {
+                    1: "HTML 문서 내에 글자의 글꼴 종류, 크기, 색, 여백 등을 지정한다.",
+                    2: "스타일 시트만으로 동적인 DHTML을 작성하는 것이 가능하다.",
+                    3: "OS나 프로그램이 관계없이 누구나 동일한 문서 내용을 볼 수 있도록 하기 위해 만들어졌다.",
+                    4: "글자의 정렬 방식을 결정하거나 그림자를 지정하는 등 다양한 효과를 줄 수 있다."
+                },
+                answerResult : "2",
+                answerEx : "DHTML은 동적인 웹페이지를 제작하고자 할 때 사용하는 웹언어입니다. CSS는 글자나 문단, 표에 효과를 주기 위해서 사용하는 기능입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "30",
+                answerAsk : "웹 브라우저(Brower)가 아닌 것은?",
+                answerChoice : {
+                    1: "핫 자바(Hot Java)",
+                    2: "익스프레스(Express)",
+                    3: "오페라(Opera)",
+                    4: "모자익(Mosaic)"
+                },
+                answerResult : "2",
+                answerEx : "익스프레스는 아웃룩익스프레스를 떠 올리시면 됩니다. 메일계정 관리 프로그램입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "31",
+                answerAsk : "OSI 7계층 구조를 낮은 계층에서 높은 계층으로 순서대로 나열한 것은?",
+                answerChoice : {
+                    1: "물리 계층-데이터링크 계층-세션 계층-네트워크 계층-전송 계층-응용 계층-표현 계층",
+                    2: "물리 계층-데이터링크 계층-네트워크 계층-전송 계층-세션 계층-응용 계층-표현 계층",
+                    3: "물리 계층-데이터링크 계층-네트워크 계층-전송 계층-세션 계층-표현 계층-응용 계층",
+                    4: "전송 계층-물리 계층-데이터링크 계층-네트워크 계층-세션 계층-표현 계층-응용 계층"
+                },
+                answerResult : "3",
+                answerEx : "OSI7계층은 물리 -> 데이터링크 -> 네트워크 -> 트랜스포트(전송) -> 세션 -> 프리젠테이션(표현) -> 응용 계층으로 구성됩니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "32",
+                answerAsk : "웹 페이지를 제작하는 저작용 프로그램이 아닌 것은?",
+                answerChoice : {
+                    1: "Dream weaver",
+                    2: "Flash",
+                    3: "Namo",
+                    4: "Windows Media Player"
+                },
+                answerResult : "4",
+                answerEx : "Windows Media Player은 동영상및 음악 재생 프로그램입니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "33",
+                answerAsk : "URL을 표기하는 일반적인 형식으로 옳은 것은?",
+                answerChoice : {
+                    1: "프로토콜://화일경로/화일명",
+                    2: "프로토콜://호스트주소[:포트번호]/화일경로/화일명",
+                    3: "포트번호://프로토콜/화일경로/화일명",
+                    4: "포트번호://프로토콜/호스트주소/화일경로/화일명"
+                },
+                answerResult : "2",
                 answerEx : ""
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "34",
+                answerAsk : "도메인 네임(Domain Name)으로 사용할 수 없는 것은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "saving-.com",
+                    2: "1588-6624.co.kr",
+                    3: "flower-order.org",
+                    4: "6288delivery.net"
                 },
-                answerResult : "",
+                answerResult : "1",
+                answerEx : "도메인 네임 규칙"<br>"하이픈(-)과 영문자, 숫자로 조합가능하다."<br>"하이픈(-)로 끝나서는 안된다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "35",
+                answerAsk : "웹 문서의 바탕에 배경을 지정하려 할 경우에 어떤 태크 안에 삽입해야 하는가?",
+                answerChoice : {
+                    1: "<body>",
+                    2: "<table>",
+                    3: "<title>",
+                    4: "<b>"
+                },
+                answerResult : "1",
+                answerEx : "문서의 바탕은 <body> 항목에 넣어야 합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "36",
+                answerAsk : "인터넷의 수많은 정보를 주제별 또는 종류별로 구분한 후 체계적으로 구조화하여 메뉴형태로 정리해 놓은 것으로, 정보를 효율적으로 접근할 수 있도록 해주는 인터넷 정보 서비스는?",
+                answerChoice : {
+                    1: "FTP",
+                    2: "GOPHER",
+                    3: "TELNET",
+                    4: "WHOIS"
+                },
+                answerResult : "2",
+                answerEx : "메뉴형태로 정보를 검색할 수 있도록 정리해 놓은 것을 고퍼라고 합니다."<br>"FTP : 파일전송"<br>"TELNET : 원거리 접속"<br>"WHOIS : 사용중인 사용자 정보보기"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "37",
+                answerAsk : "Java 스크립트 언어의 배열 객체에서 두 개 이상의 배열을 결합하여 하나의 배열 객체를 생성하여 반환하는 메서트(Method)는?",
+                answerChoice : {
+                    1: "concat( )",
+                    2: "join( )",
+                    3: "everse( )",
+                    4: "slice( )"
+                },
+                answerResult : "1",
+                answerEx : "concat( ): 현재 배열에 두 개 이상의 배열을 결합하여 하나의 배열 객체를 생성하여 반환"<br>"join( ) : 배열 요소들을 하나의 문자열로 반환"<br>"reverse( ): 배열의 값을 역순으로 변환"<br>"slice( ) : 배열의 일부분을 선택하여 새로운 배열을 만듬"
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "38",
+                answerAsk : "상호작용을 지원하는 웹 페이지 제작을 위한 CGI의 설명으로 틀린 것은?",
+                answerChoice : {
+                    1: "웹 브라우저와 웹 서버, 응용 프로그램 간의 일종의 인터페이스이다.",
+                    2: "방명록이나 카운터, 게시판 등에 사용된다.",
+                    3: "사용자에게 일방적인 정보 제공을 하기 위해 사용된다.",
+                    4: "HTML의 <FORM> 태그를 이용하여 CGI 프로그램으로 데이터를 전달한다."
+                },
+                answerResult : "3",
+                answerEx : "CGI는 쌍방향으로 정보교류가 가능합니다."
+            },
+            {
+                answerType : "웹디자인기능사 2010년 01회",
+                answerNum : "39",
+                answerAsk : "검색 엔진인 구글(Google)에 대한 설명으로 틀린 것은?",
+                answerChoice : {
+                    1: "로봇(Robot) 프로그램을 이용하여 단어별 다국어 검색엔진이다.",
+                    2: "검색 결과와 유사한 문서들을 [비슷한 페이지] 링크로 보여준다.",
+                    3: "PDF 형태의 정보 검색이 가능하다.",
+                    4: "모든 검색어에 대해 기본 값으로 OR 연산을 실행한다."
+                },
+                answerResult : "4",
                 answerEx : ""
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "40",
+                answerAsk : "웹 브라우저에 대한 설명으로 틀린것은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "사용자가 웹 서버의 하이퍼텍스트 문서를 볼 수 있게 하는 클라이언트 프로그램이다.",
+                    2: "HTTP외에도 FTP, Gopher, News 등의 다양한 서비스 사용이 가능하다.",
+                    3: "마이크로 소프트에서 무료로 배포하는 웹 브라우저는 넷스케이프 네비게이터이다.",
+                    4: "텍스트 기반의 대표적인 웹 브라우저로 링스(Lynx), 삼바(samba) 등이 있다."
                 },
-                answerResult : "",
-                answerEx : ""
+                answerResult : "3",
+                answerEx : "마이크로소프트사에서 무료로 배포하는 웹 브라우저는 인터넷익스플로러 입니다."
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
+                answerNum : "41",
+                answerAsk : "컴퓨터 그래픽스 시스템의 연산장치에 해당하지 않는 것은?",
                 answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
+                    1: "누산기",
+                    2: "가산기",
+                    3: "명령 레지스터",
+                    4: "상태 레지스터"
                 },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
-            },
-            {
-                answerType : "웹디자인기능사 2010년 01회",
-                answerNum : "",
-                answerAsk : "",
-                answerChoice : {
-                    1: "",
-                    2: "",
-                    3: "",
-                    4: ""
-                },
-                answerResult : "",
-                answerEx : ""
+                answerResult : "3",
+                answerEx : "명령레지스터는 현재 실행중인 명령을 기억하는 레지스터로 제어장치에 해당합니다."
             },
             {
                 answerType : "웹디자인기능사 2010년 01회",
