--- a/javascript/javascript06.html
+++ b/javascript/javascript06.html
@@ -111,7 +111,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">     // 01
+<pre><code class="language.js">    // 01
     const arrNum = [100, 200, 300, 400, 500];
 
     document.querySelector(".sample01_N1").innerHTML = "1";
@@ -142,7 +142,7 @@
                 <!-- 02 -->
                 <div id="sample02" class="sample">
                     <h3>02. 배열 메서드 : join() : 배열 요소 문자열 결합 : 반환(문자열) ***</h3>
-                    <p></p>
+                    <p>join() 메서드는 배열의 모든 요소 값을 문자열로 변경하며, 인수로 받은 문자로 연결해서 문장열로 반환한다.</p>
                     <div class="table">
                         <table>
                             <colgroup>
@@ -188,7 +188,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">     const arrNum = [100, 200, 300, 400, 500];
+<pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500];
     const text1 = arrNum.join('');
     const text2 = arrNum.join(' ');
     const text3 = arrNum.join('*');
@@ -262,7 +262,7 @@
                         </table>
                     </div>
                     <div class="script">
-<pre><code class="language.js">     // 01
+<pre><code class="language.js">    // 01
     const arrNum = [100, 200, 300, 400, 500]
     const arrPush = arrNum.push(600);
 
