--- a/javascript/study/jpp.html
+++ b/javascript/study/jpp.html
@@ -16,7 +16,7 @@
             <!-- 01 -->
             <div id="sample01" class="sample">
                 <h3 class="t_tit2">01. 배열 메서드 : join() : 배열 요소 문자열 결합 : 반환(문자열)</h3>
-                <p class="t_desc2">join 메서드는 배열의 모든 요소 값을 문자열로 변경하며, 인수로 받은 문자로 연결해서 문장열로 반환한다.</p><br>
+                <p class="t_desc2">join() 메서드는 배열의 모든 요소 값을 문자열로 변경하며, 인수로 받은 문자로 연결해서 문장열로 반환한다.</p><br>
                 <div class="t_code">
 <pre><code class="language.js">    const arrNum = [100, 200, 300, 400, 500];
     const text1 = arrNum.join('');      // 기본값
@@ -64,8 +64,8 @@
     const arrPush = arrNum.push(600);
 
     document.querySelector(".sample01_M1").innerHTML = "push(600)";
-    document.querySelector(".sample01_P1").innerHTML = arrPush;      // 6
-    document.querySelector(".sample01_A1").innerHTML = arrNum;      // 100, 200 , 300, 400, 500, 600
+    document.querySelector(".sample01_P1").innerHTML = arrPush;  // 6
+    document.querySelector(".sample01_A1").innerHTML = arrNum;  // 100, 200 , 300, 400, 500, 600
 </code></pre>
                 </div>
             </div>
